--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ tiktoken = "^0.5.2"
 pdfplumber = "^0.9.0"
 python-docx = "^1.1.0"
 ebooklib = "^0.18"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -36,3 +37,41 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 dev = "src.main:main"
+test = "pytest"
+test-cov = "pytest --cov=backend.src --cov-report=html --cov-report=term"
+
+[tool.pytest.ini_options]
+testpaths = ["backend/tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--strict-markers",
+    "--tb=short",
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "e2e: End-to-end tests",
+]
+
+[tool.coverage.run]
+source = ["backend/src"]
+omit = [
+    "*/tests/*",
+    "*/__pycache__/*",
+    "*/venv/*",
+    "*/.venv/*",
+    "*/.env/*",
+    "backend/src/main.py",  # Main entry point doesn't need coverage
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:"
+]
