--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]>=0.24.0
 sqlalchemy>=2.0.23
 psycopg2-binary>=2.9.9
 alembic>=1.13.1
-langchain>=0.0.332
+langchain>=0.1.0
+langchain-community>=0.0.19
 chromadb>=0.4.22
 google-generativeai>=0.3.1
 pydantic>=2.5.0
